ADC/.metadata/.plugins/org.eclipse.cdt.ui/DE10_NANO_ADC.build.log
21:21:48 **** Incremental Build of configuration Nios II for project DE10_NANO_ADC ****
make all 
Info: Building ../DE10_NANO_ADC_bsp/
C:/intelFPGA_lite/17.0/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../DE10_NANO_ADC_bsp/
[BSP build complete]
Info: Compiling main.c to obj/default/main.o
nios2-elf-gcc -xc -MP -MMD -c -I../DE10_NANO_ADC_bsp//HAL/inc -I../DE10_NANO_ADC_bsp/ -I../DE10_NANO_ADC_bsp//drivers/inc  -pipe -D__hal__ -DALT_NO_INSTRUCTION_EMULATION -DALT_SINGLE_THREADED    -O0 -g -Wall   -mno-hw-div -mhw-mul -mno-hw-mulx  -o obj/default/main.o main.c
main.c:8:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main(void){
      ^
main.c: In function 'main':
main.c:40:8: error: expected identifier or '(' before string constant
    int("Value=%.3f /n",T);
        ^
make: *** [obj/default/main.o] Error 1

21:21:53 Build Finished (took 5s.105ms)

